create github pages

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section id="menu-0" data-rv-view="548">
+<section id="menu-0" data-rv-view="78">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -45,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="index.html#slider3-1" data-toggle="dropdown-submenu" aria-expanded="true">ПРОДУКТ</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#msg-box5-h" aria-expanded="false">1. РУЧНОЙ МОБИЛЬНЫЙ ДОСМОТРОВЫЙ СОВМЕЩЕННЫЙ СКАНЕР «RAD-1000» (готовое решение)</a><a class="dropdown-item" href="index.html#msg-box5-1i" aria-expanded="false">2.&nbsp;РАМОЧНЫЙ СТАЦИОНАРНЫЙ ДОСМОТРОВЫЙ СОВМЕЩЕННЫЙ КОМПЛЕКС «RAD-3MR» (готовое решение)</a><a class="dropdown-item" href="index.html#msg-box5-15" aria-expanded="false">3.&nbsp;РАДИАЦИОННЫЕ ДЕТЕКТОРЫ НАЧАЛЬНОГО УРОВНЯ СЕРИИ «RT-3.x» (для компактного оборудования)</a><a class="dropdown-item" href="index.html#msg-box5-14" aria-expanded="false">4.&nbsp;РАДИАЦИОННЫЕ ДЕТЕКТОРЫ ПОВЫШЕННОЙ ЧУВСТВИТЕЛЬНОСТИ СЕРИИ «RT-40.x» (для крупногабаритного оборудования)</a><a class="dropdown-item" href="index.html#msg-box5-r" aria-expanded="false">5. РАДИАЦИОННЫЙ ДЕТЕКТОР «NaI (tl) 40x4» (для беспилотных летательных аппаратов (дроны))</a><a class="dropdown-item" href="index.html#msg-box5-1j" aria-expanded="false">6. ОБНАРУЖЕНИЕ ВЗРЫВЧАТЫХ ВЕЩЕСТВ</a></div></li><li class="nav-item"><a class="nav-link link" href="index.html#content2-18">УНИКАЛЬНОСТЬ</a></li><li class="nav-item"><a class="nav-link link" href="index.html#content2-1g">ПРЕИМУЩЕСТВА</a></li><li class="nav-item"><a class="nav-link link" href="index.html#features3-3">ПРИМЕНЕНИЕ</a></li><li class="nav-item"><a class="nav-link link" href="index.html#content2-1k">ПРЕДЛОЖЕНИЕ</a></li><li class="nav-item"><a class="nav-link link" href="index.html#contacts1-u">КОНТАКТЫ</a></li><li class="nav-item"><a class="nav-link link" href="https://drive.google.com/open?id=0B0UWKn3P2YloVnM1U0lHSTFJWEk">ВИДЕО</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary-outline btn-primary" href="index.html#header6-12">СКАЧАТЬ</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="index.html#slider3-1" data-toggle="dropdown-submenu" aria-expanded="false">ПРОДУКТ</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#msg-box5-h" aria-expanded="false">1. РУЧНОЙ МОБИЛЬНЫЙ ДОСМОТРОВЫЙ СОВМЕЩЕННЫЙ СКАНЕР «RAD-1000» (готовое решение)</a><a class="dropdown-item" href="index.html#msg-box5-1i" aria-expanded="false">2.&nbsp;РАМОЧНЫЙ СТАЦИОНАРНЫЙ ДОСМОТРОВЫЙ СОВМЕЩЕННЫЙ КОМПЛЕКС «RAD-3MR» (готовое решение)</a><a class="dropdown-item" href="index.html#msg-box5-15" aria-expanded="false">3.&nbsp;РАДИАЦИОННЫЕ ДЕТЕКТОРЫ НАЧАЛЬНОГО УРОВНЯ СЕРИИ «RT-3.x» (для компактного оборудования)</a><a class="dropdown-item" href="index.html#msg-box5-14" aria-expanded="false">4.&nbsp;РАДИАЦИОННЫЕ ДЕТЕКТОРЫ ПОВЫШЕННОЙ ЧУВСТВИТЕЛЬНОСТИ СЕРИИ «RT-40.x» (для крупногабаритного оборудования)</a><a class="dropdown-item" href="index.html#msg-box5-r" aria-expanded="false">5. РАДИАЦИОННЫЙ ДЕТЕКТОР «NaI (tl) 40x4» (для беспилотных летательных аппаратов (дроны))</a><a class="dropdown-item" href="index.html#msg-box5-1j" aria-expanded="false">6. ОБНАРУЖЕНИЕ ВЗРЫВЧАТЫХ ВЕЩЕСТВ</a></div></li><li class="nav-item"><a class="nav-link link" href="index.html#content2-18">УНИКАЛЬНОСТЬ</a></li><li class="nav-item"><a class="nav-link link" href="index.html#content2-1g">ПРЕИМУЩЕСТВА</a></li><li class="nav-item"><a class="nav-link link" href="index.html#features3-3">ПРИМЕНЕНИЕ</a></li><li class="nav-item"><a class="nav-link link" href="index.html#content2-1k">ПРЕДЛОЖЕНИЕ</a></li><li class="nav-item"><a class="nav-link link" href="index.html#contacts1-u">КОНТАКТЫ</a></li><li class="nav-item"><a class="nav-link link" href="https://drive.google.com/open?id=0B0UWKn3P2YloVnM1U0lHSTFJWEk">ВИДЕО</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary-outline btn-primary" href="index.html#header6-12">СКАЧАТЬ</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">website creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header4-w" data-rv-view="550" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
+<section class="engine"><a href="https://mobirise.co/e">web page building software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header4-w" data-rv-view="80" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(49, 53, 69);"></div>
 
@@ -83,7 +83,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-18" data-rv-view="553" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-18" data-rv-view="83" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -94,7 +94,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-1g" data-rv-view="555" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 60px;">
+<section class="mbr-section article mbr-section__container" id="content2-1g" data-rv-view="85" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 60px;">
 
     <div class="container">
         <div class="row">
@@ -105,7 +105,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-h" data-rv-view="557" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 0px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-h" data-rv-view="87" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 0px;">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);">
     </div>
@@ -174,7 +174,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-1i" data-rv-view="560" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 0px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-1i" data-rv-view="90" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 0px;">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);">
     </div>
@@ -225,7 +225,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-15" data-rv-view="563" style="background-image: url(assets/images/-1280x800.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-15" data-rv-view="93" style="background-image: url(assets/images/-1280x800.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(255, 255, 255);">
     </div>
@@ -261,7 +261,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-14" data-rv-view="566" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-14" data-rv-view="96" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);">
     </div>
@@ -308,7 +308,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-r" data-rv-view="569" style="background-image: url(assets/images/-1280x800.jpg); padding-top: 80px; padding-bottom: 80px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-r" data-rv-view="99" style="background-image: url(assets/images/-1280x800.jpg); padding-top: 80px; padding-bottom: 80px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(255, 255, 255);">
     </div>
@@ -351,7 +351,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-1j" data-rv-view="572" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-1j" data-rv-view="102" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);">
     </div>
@@ -387,7 +387,7 @@
 
 </section>
 
-<section class="mbr-cards mbr-section mbr-section-nopadding mbr-background" id="features3-3" data-rv-view="575" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
+<section class="mbr-cards mbr-section mbr-section-nopadding mbr-background" id="features3-3" data-rv-view="105" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(43, 39, 39);">
     </div>
@@ -474,7 +474,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-1k" data-rv-view="578" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 60px;">
+<section class="mbr-section article mbr-section__container" id="content2-1k" data-rv-view="108" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 60px;">
 
     <div class="container">
         <div class="row">
@@ -484,7 +484,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background" id="header6-12" data-rv-view="580" style="background-image: url(assets/images/-1280x800.jpg);">
+<section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background" id="header6-12" data-rv-view="110" style="background-image: url(assets/images/-1280x800.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(255, 255, 255);">
     </div>
@@ -525,7 +525,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-u" data-rv-view="583" style="background-color: rgb(43, 39, 39); padding-top: 30px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-u" data-rv-view="113" style="background-color: rgb(43, 39, 39); padding-top: 30px; padding-bottom: 0px;">
     
     <div class="container">
         <div class="row">
@@ -548,7 +548,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-parallax-background" id="footer1-13" data-rv-view="585" style="background-image: url(assets/images/jumbotron.jpg); padding-top: 0.875rem; padding-bottom: 0.875rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-parallax-background" id="footer1-13" data-rv-view="115" style="background-image: url(assets/images/jumbotron.jpg); padding-top: 0.875rem; padding-bottom: 0.875rem;">
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(68, 68, 68);"></div>
     <div class="container text-xs-center">
         <p><strong>2017 ООО "ТермоВат"</strong></p>
