--- a/page1.html
+++ b/page1.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-<section id="menu-20" data-rv-view="587">
+<section id="menu-20" data-rv-view="117">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -45,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="index.html#slider3-1" data-toggle="dropdown-submenu" aria-expanded="true">ПРОДУКТ</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#msg-box5-h" aria-expanded="false">1. РУЧНОЙ МОБИЛЬНЫЙ ДОСМОТРОВЫЙ СОВМЕЩЕННЫЙ СКАНЕР «RAD-1000» (готовое решение)</a><a class="dropdown-item" href="index.html#msg-box5-1i" aria-expanded="false">2.&nbsp;РАМОЧНЫЙ СТАЦИОНАРНЫЙ ДОСМОТРОВЫЙ СОВМЕЩЕННЫЙ КОМПЛЕКС «RAD-3MR» (готовое решение)</a><a class="dropdown-item" href="index.html#msg-box5-15" aria-expanded="false">3.&nbsp;РАДИАЦИОННЫЕ ДЕТЕКТОРЫ НАЧАЛЬНОГО УРОВНЯ СЕРИИ «RT-3.x» (для компактного оборудования)</a><a class="dropdown-item" href="index.html#msg-box5-14" aria-expanded="false">4.&nbsp;РАДИАЦИОННЫЕ ДЕТЕКТОРЫ ПОВЫШЕННОЙ ЧУВСТВИТЕЛЬНОСТИ СЕРИИ «RT-40.x» (для крупногабаритного оборудования)</a><a class="dropdown-item" href="index.html#msg-box5-r" aria-expanded="false">5. РАДИАЦИОННЫЙ ДЕТЕКТОР «NaI (tl) 40x4» (для беспилотных летательных аппаратов (дроны))</a><a class="dropdown-item" href="index.html#msg-box5-1j" aria-expanded="false">6. ОБНАРУЖЕНИЕ ВЗРЫВЧАТЫХ ВЕЩЕСТВ</a></div></li><li class="nav-item"><a class="nav-link link" href="index.html#content2-18">УНИКАЛЬНОСТЬ</a></li><li class="nav-item"><a class="nav-link link" href="index.html#content2-1g">ПРЕИМУЩЕСТВА</a></li><li class="nav-item"><a class="nav-link link" href="index.html#features3-3">ПРИМЕНЕНИЕ</a></li><li class="nav-item"><a class="nav-link link" href="index.html#content2-1k">ПРЕДЛОЖЕНИЕ</a></li><li class="nav-item"><a class="nav-link link" href="index.html#contacts1-u">КОНТАКТЫ</a></li><li class="nav-item"><a class="nav-link link" href="https://drive.google.com/open?id=0B0UWKn3P2YloVnM1U0lHSTFJWEk">ВИДЕО</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary-outline btn-primary" href="index.html#header6-12">СКАЧАТЬ</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="index.html#slider3-1" data-toggle="dropdown-submenu" aria-expanded="false">ПРОДУКТ</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#msg-box5-h" aria-expanded="false">1. РУЧНОЙ МОБИЛЬНЫЙ ДОСМОТРОВЫЙ СОВМЕЩЕННЫЙ СКАНЕР «RAD-1000» (готовое решение)</a><a class="dropdown-item" href="index.html#msg-box5-1i" aria-expanded="false">2.&nbsp;РАМОЧНЫЙ СТАЦИОНАРНЫЙ ДОСМОТРОВЫЙ СОВМЕЩЕННЫЙ КОМПЛЕКС «RAD-3MR» (готовое решение)</a><a class="dropdown-item" href="index.html#msg-box5-15" aria-expanded="false">3.&nbsp;РАДИАЦИОННЫЕ ДЕТЕКТОРЫ НАЧАЛЬНОГО УРОВНЯ СЕРИИ «RT-3.x» (для компактного оборудования)</a><a class="dropdown-item" href="index.html#msg-box5-14" aria-expanded="false">4.&nbsp;РАДИАЦИОННЫЕ ДЕТЕКТОРЫ ПОВЫШЕННОЙ ЧУВСТВИТЕЛЬНОСТИ СЕРИИ «RT-40.x» (для крупногабаритного оборудования)</a><a class="dropdown-item" href="index.html#msg-box5-r" aria-expanded="false">5. РАДИАЦИОННЫЙ ДЕТЕКТОР «NaI (tl) 40x4» (для беспилотных летательных аппаратов (дроны))</a><a class="dropdown-item" href="index.html#msg-box5-1j" aria-expanded="false">6. ОБНАРУЖЕНИЕ ВЗРЫВЧАТЫХ ВЕЩЕСТВ</a></div></li><li class="nav-item"><a class="nav-link link" href="index.html#content2-18">УНИКАЛЬНОСТЬ</a></li><li class="nav-item"><a class="nav-link link" href="index.html#content2-1g">ПРЕИМУЩЕСТВА</a></li><li class="nav-item"><a class="nav-link link" href="index.html#features3-3">ПРИМЕНЕНИЕ</a></li><li class="nav-item"><a class="nav-link link" href="index.html#content2-1k">ПРЕДЛОЖЕНИЕ</a></li><li class="nav-item"><a class="nav-link link" href="index.html#contacts1-u">КОНТАКТЫ</a></li><li class="nav-item"><a class="nav-link link" href="https://drive.google.com/open?id=0B0UWKn3P2YloVnM1U0lHSTFJWEk">ВИДЕО</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary-outline btn-primary" href="index.html#header6-12">СКАЧАТЬ</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/g">create a website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header4-21" data-rv-view="589" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
+<section class="engine"><a href="https://mobirise.co/h">make your own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header4-21" data-rv-view="119" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(49, 53, 69);"></div>
 
@@ -83,7 +83,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-22" data-rv-view="592" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-22" data-rv-view="122" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -94,7 +94,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-23" data-rv-view="594" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 60px;">
+<section class="mbr-section article mbr-section__container" id="content2-23" data-rv-view="124" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 60px;">
 
     <div class="container">
         <div class="row">
@@ -105,7 +105,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-24" data-rv-view="596" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 0px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-24" data-rv-view="126" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 0px;">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);">
     </div>
@@ -162,7 +162,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-25" data-rv-view="599" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 0px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-25" data-rv-view="129" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 0px;">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);">
     </div>
@@ -219,7 +219,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-26" data-rv-view="602" style="background-image: url(assets/images/-1280x800.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-26" data-rv-view="132" style="background-image: url(assets/images/-1280x800.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(255, 255, 255);">
     </div>
@@ -255,7 +255,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-27" data-rv-view="605" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-27" data-rv-view="135" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);">
     </div>
@@ -303,7 +303,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-28" data-rv-view="608" style="background-image: url(assets/images/-1280x800.jpg); padding-top: 80px; padding-bottom: 80px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-28" data-rv-view="138" style="background-image: url(assets/images/-1280x800.jpg); padding-top: 80px; padding-bottom: 80px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(255, 255, 255);">
     </div>
@@ -346,7 +346,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-29" data-rv-view="611" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 40px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-29" data-rv-view="141" style="background-image: url(assets/images/mbr-2-1620x1080.jpg); padding-top: 80px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);">
     </div>
@@ -382,7 +382,7 @@
 
 </section>
 
-<section class="mbr-cards mbr-section mbr-section-nopadding mbr-background" id="features3-2a" data-rv-view="614" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
+<section class="mbr-cards mbr-section mbr-section-nopadding mbr-background" id="features3-2a" data-rv-view="144" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(43, 39, 39);">
     </div>
@@ -469,7 +469,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-2b" data-rv-view="617" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 60px;">
+<section class="mbr-section article mbr-section__container" id="content2-2b" data-rv-view="147" style="background-color: rgb(239, 239, 239); padding-top: 60px; padding-bottom: 60px;">
 
     <div class="container">
         <div class="row">
@@ -479,7 +479,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background" id="header6-2c" data-rv-view="619" style="background-image: url(assets/images/-1280x800.jpg);">
+<section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background" id="header6-2c" data-rv-view="149" style="background-image: url(assets/images/-1280x800.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(255, 255, 255);">
     </div>
@@ -520,7 +520,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-2d" data-rv-view="622" style="background-color: rgb(43, 39, 39); padding-top: 30px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-2d" data-rv-view="152" style="background-color: rgb(43, 39, 39); padding-top: 30px; padding-bottom: 0px;">
     
     <div class="container">
         <div class="row">
@@ -543,7 +543,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-parallax-background" id="footer1-2e" data-rv-view="624" style="background-image: url(assets/images/jumbotron.jpg); padding-top: 0.875rem; padding-bottom: 0.875rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding mbr-parallax-background" id="footer1-2e" data-rv-view="154" style="background-image: url(assets/images/jumbotron.jpg); padding-top: 0.875rem; padding-bottom: 0.875rem;">
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(68, 68, 68);"></div>
     <div class="container text-xs-center">
         <p><strong>2017 ООО "ТермоВат"</strong></p>
