--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/e">web page building software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header4-w" data-rv-view="80" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
+<section class="engine"><a href="https://mobirise.co/c">site maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header4-w" data-rv-view="80" style="background-image: url(assets/images/mbr-2-1620x1080.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(49, 53, 69);"></div>
 
@@ -533,8 +533,8 @@
                 <div><a href="index.html#header4-w"><img src="assets/images/neurad-2-128x93.png"></a></div>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><strong>ООО "ТермоВат" </strong><br><strong>Беларусь, 220116, Минск, 
-<br>Бетонный проезд, 19 А, оф. 306&nbsp;<br>Email:&nbsp;neurad.info@gmail.com&nbsp;<br>Phone: +375 (29) 6317655
+                <p><strong>ООО "ТермоВат" </strong><br><strong>Беларусь, 220036, Минск, 
+<br>Бетонный проезд, 19а, оф. 306&nbsp;<br>Email:&nbsp;neurad.info@gmail.com&nbsp;<br>Phone: +375 29 6317655
 </strong><br><br><br></p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
